# tradinglab

./: .commit-msg-jit.txt  .cov_pol.json  .cov_pol2.json  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TradingLab.spec  pyproject.toml  spec.md  tmp_commit.txt
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
config/: example_config.json  example_watchlists.json
data/entry_strategy_templates/: tmpl-close-above-bbands-mid-long.json  tmpl-close-above-ema20-long.json  tmpl-close-below-bbands-mid-short.json  tmpl-close-below-ema20-short.json  tmpl-ema-3-8-cross-long.json  tmpl-ema-9-21-cross-long.json  tmpl-ema-9-21-cross-short.json  tmpl-ema20-falling-short.json  tmpl-ema20-rising-long.json  tmpl-ema9-pullback-long-1m.json  tmpl-new-high-20-long.json  tmpl-new-low-20-short.json  tmpl-rsi-bearish-45-short.json  tmpl-rsi-bullish-55-long.json  tmpl-rsi-oversold-long-1m.json  tmpl-sma-20-50-cross-long.json  tmpl-sma-20-50-cross-short.json  tmpl-vwap-hold-3-bars-long.json  tmpl-vwap-reclaim-long.json  tmpl-vwap-reject-short.json
data/exit_strategy_templates/: tmpl-exit-activated-trailing-1pct-after-2pct.json  tmpl-exit-bracket-1-1.json  tmpl-exit-bracket-2pct.json  tmpl-exit-bracket-3-1-5.json  tmpl-exit-chandelier-10-1-5.json  tmpl-exit-chandelier-14-2.json  tmpl-exit-chandelier-22-3.json  tmpl-exit-profit-1pct.json  tmpl-exit-profit-3pct.json  tmpl-exit-scale-out-1-3.json  tmpl-exit-scale-thirds-1-2-3.json  tmpl-exit-stop-1pct.json  tmpl-exit-stop-3pct.json  tmpl-exit-target-2-stop-0-75.json  tmpl-exit-time-stop-1500.json  tmpl-exit-time-stop-1530.json  tmpl-exit-time-stop-1555.json  tmpl-exit-trailing-1-5pct.json  tmpl-exit-trailing-2pct.json  tmpl-exit-trailing-3pct.json
data/indicator_presets/: preset-atr-risk.json  preset-daily-levels.json  preset-default.json  preset-intraday-trend.json  preset-laguerre-reversal.json  preset-macd-momentum.json  preset-mean-reversion.json  preset-momentum.json  preset-opening-drive.json  preset-pullback-toolkit.json  preset-relative-strength.json  preset-scalper.json  preset-smoothed-trend.json  preset-squeeze-watch.json  preset-swing-trend.json  preset-trend.json  preset-volatility-bands-plus-keltner.json  preset-volatility.json  preset-volume-leaders.json  preset-vwap-anchor.json
data/scanner_templates/: tmpl-scan-above-vwap-rising.json  tmpl-scan-ema-trend.json  tmpl-scan-new-high-20.json  tmpl-scan-nr7.json  tmpl-scan-rvol-hi.json
docs/: BUILDING_EXE.md  COMPARE_TOGGLE_VIEW_SAFE.md  CUSTOM_INDICATORS.md  ENTRIES_EXITS.md  JIT_FEASIBILITY.md  LOCAL_DATA.md  ONBOARDING.md  PAINT_PIPELINE_REFACTOR.md  PERFORMANCE.md  RATIO_CHARTS.md  SANDBOX_HEATMAP.md  SPEC_INDEX.md  SPEC_STYLE.md  STRATEGY_TESTER.md  TARGETED_FETCH.md  UNIVERSES.md  WATCHLISTS.md  WATCHLIST_COLUMNS.md  chartstack.md  spec.md
docs/indicators/: adx.md  atr.md  (+16 more)
scripts/: clear_cache.py  run_dev.py
tests/: _config_roundtrip_spec.py  conftest.py
tools/: benchmark_indicators.py  benchmark_indicators.spec.md  big_tournament.py  build_exe.ps1  bump_version.py  extract_changelog.py  fetch_test_fixtures.py  fetch_universe_1d.py  manual_tournament.py  manual_tournament_v2.py  manual_tournament_v3.py  nasdaq.csv  nyse.csv  profile_normalize_sessions.py  profile_render_indicators.py  profile_ticker_switch.py  refresh_exchange_lists.py  rvol_tournament.py  sandbox_arena.py  sandbox_arena_gui.py  universe_cache.py  verify_frozen.ps1
(+1123 files in other folders)
