[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradinglab"
dynamic = ["version"]
description = "Desktop candlestick charting application for equities (Tkinter + matplotlib)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pacomok" }]
keywords = ["stocks", "candlestick", "charting", "tkinter", "matplotlib", "yfinance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    # ``lxml`` is required by ``yfinance.Ticker.earnings_dates`` (which
    # scrapes the earnings calendar HTML via ``pandas.read_html``) but
    # is NOT declared as a transitive dependency by yfinance>=1.3 — they
    # ship ``beautifulsoup4`` and treat lxml as opt-in. Without it the
    # watchlist "Next Earn" column stays blank for every ticker because
    # ``earnings_dates`` raises ``ImportError`` which the fetcher
    # silently swallows. Pin as a direct dep so a fresh install always
    # gets the parser. Audit ``next-earn-lxml``.
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-timeout>=2.3",
    "ruff>=0.15,<0.16",
]
schwab = [
    # Required for the Schwab streaming WebSocket source. Base install
    # stays lean; only users who configure Schwab + want live streaming
    # need to opt in via `pip install tradinglab[schwab]`.
    "websocket-client>=1.7",
]

[project.scripts]
tradinglab = "tradinglab.__main__:main"

[project.urls]
Homepage = "https://github.com/pmok3/tradinglab"
Issues = "https://github.com/pmok3/tradinglab/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "tradinglab._version.__version__" }

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
# `--timeout=120` per-test cap so a hung Tk / future-poll loop fails the
# test instead of stalling the entire CI job (which previously stuck on
# macOS for the runner's 6-hour default). `--timeout-method=thread`
# survives the GIL in case the hang is in C-extension matplotlib code.
addopts = "-ra --strict-markers --timeout=120 --timeout-method=thread"
markers = [
    "smoke: end-to-end smoke tests (slow, headless GUI)",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length already enforced softly
    "E701",  # multi-statements-on-one-line (style preference; existing codebase pattern)
    "E702",  # multi-statements-on-one-line via semicolon (compact OHLC inits etc.)
    "E741",  # ambiguous variable name (e.g. `l` = low in OHLC contexts)
    "B008",  # mpl APIs use mutable defaults
    "B904",  # legacy except-without-from in many places
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "F401", "F841", "UP035", "B017"]
